# note-espidf

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  TODO.md  idf_component.yml
.github/workflows/: build-examples.yml  publish-component.yml  validate-component.yml
examples/basic_usage_i2c/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/basic_usage_i2c/main/: main.c
examples/basic_usage_uart/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/basic_usage_uart/main/: main.c
include/: notecard.h  notecard_esp.h
src/: notecard.c  notecard_esp.c  notecard_platform.c  notecard_platform.h
test/: CMakeLists.txt  test_notecard_config.c
test/main/: CMakeLists.txt  test_main.c
